disassembler: print 'R<regs>' instead of '<reg>'
Signed-off-by: Itai-Nelken <itainelken@gmail.com>

--- a/VM/Makefile
+++ b/VM/Makefile
@@ -6,8 +6,10 @@ OBJ = $(SRC:.c=.o)
 BIN := vm
 DEBUG ?= 0
 VERBOSE ?= 0
-ifneq (DEBUG, 0)
-	CFLAGS += -g
+
+ifeq (DEBUG, 1)
+	@echo "compiling with debug symbols"
+	CFLAGS+= -g
 endif
 
 # verbosity for CC
