new: Initial work on vm.
Signed-off-by: Itai-Nelken <itainelken@gmail.com>

--- a/new/CMakeLists.txt
+++ b/new/CMakeLists.txt
@@ -3,5 +3,6 @@ project(VM VERSION 0.1 LANGUAGES C)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
+include_directories(./include)
 add_subdirectory(vm)
 
